--- a/4C_2023_ECommerce/css/style.css
+++ b/4C_2023_ECommerce/css/style.css
@@ -464,7 +464,7 @@ a:focus {
           align-items: center;
 }
 
-.product_section .options a {
+.options > * {
   display: inline-block;
   padding: 8px 15px;
   border-radius: 30px;
@@ -475,24 +475,28 @@ a:focus {
   margin: 5px 0;
 }
 
-.product_section .options .option1 {
+.options > *:disabled {
+  opacity: 0.7;
+}
+
+.options .option1 {
   background-color: #f7444e;
   border: 1px solid #f7444e;
   color: #ffffff;
 }
 
-.product_section .options .option1:hover {
+.options .option1:hover {
   background-color: transparent;
   color: #f7444e;
 }
 
-.product_section .options .option2 {
+.options .option2 {
   background-color: #000000;
   border: 1px solid #000000;
   color: #ffffff;
 }
 
-.product_section .options .option2:hover {
+.options .option2:hover {
   background-color: transparent;
   color: #000000;
 }
