--- a/ANGULAR/RicetteSPA/src/app/recipe-list/recipe-list.component.html
+++ b/ANGULAR/RicetteSPA/src/app/recipe-list/recipe-list.component.html
@@ -1,1 +1,38 @@
-<h1> Recipes </h1>
+<section class="container">
+    <header>
+        <h1>Recipes</h1>
+    </header>
+    
+    <main>
+        <table class="table table-hover list-items">
+            <thead>
+                <tr>
+                    <th *ngFor="let header of headers">
+                        {{header}}
+                    </th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr 
+                    class="list-item"
+                    *ngFor="let recipeHeader of recipeHeaders" 
+                    (click)="rowClick($event)" 
+                    id="{{recipeHeader.Id}}" >
+    
+                    <td>
+                        {{ recipeHeader.Name }}
+                    </td>
+                    <td>
+                        {{ recipeHeader.ExecutionTime }}
+                    </td>
+                    <td>
+                        {{ recipeHeader.GetDifficultyString() }}
+                    </td>
+    
+                </tr>
+            </tbody>
+        </table>
+    </main>
+    
+</section>
+
