--- a/ANGULAR/RicetteSPA/src/app/recipe-card/recipe-card.component.html
+++ b/ANGULAR/RicetteSPA/src/app/recipe-card/recipe-card.component.html
@@ -1,12 +1,17 @@
 <div class="recipe-card">
-    <header class="recipe-header">
+    <header class="recipe-header skeleton">
+        <button class="close-button disabled" (click)="onCloseButtonClick()">
+            <svg xmlns="http://www.w3.org/2000/svg" height="24" viewBox="0 -960 960 960" width="24" class="close-button-icon">
+                <path d="m336-280 144-144 144 144 56-56-144-144 144-144-56-56-144 144-144-144-56 56 144 144-144 144 56 56ZM480-80q-83 0-156-31.5T197-197q-54-54-85.5-127T80-480q0-83 31.5-156T197-763q54-54 127-85.5T480-880q83 0 156 31.5T763-763q54 54 85.5 127T880-480q0 83-31.5 156T763-197q-54 54-127 85.5T480-80Zm0-80q134 0 227-93t93-227q0-134-93-227t-227-93q-134 0-227 93t-93 227q0 134 93 227t227 93Zm0-320Z"/>
+            </svg>
+        </button>
         <img class="recipe-image" src="{{ recipe.UrlImage }}" alt="header-image">
     </header>
 
     <section class="recipe-info-section">
-        <h1 class="fit-content center recipe-name">{{ recipe.Name }}</h1>
+        <h1 class="fit-content center my-3 recipe-name">{{ recipe.Name }}</h1>
 
-        <div class="inline-block w-100 center">
+        <div class="inline-block w-100 center my-3">
             <div class="inline-block w-100">
                 <img src="../../assets/svg/silverware.svg" alt="" class="text-icon">
                 <span class="fit-content text-icon">1 Persona</span>
