--- a/ANGULAR/RicetteSPA/src/app/recipe-list/recipe-list.component.html
+++ b/ANGULAR/RicetteSPA/src/app/recipe-list/recipe-list.component.html
@@ -1,4 +1,4 @@
-<section class="container">
+<section class="container recipe-list-section">
     <header>
         <h1>Recipes</h1>
     </header>
@@ -35,4 +35,3 @@
     </main>
     
 </section>
-
