update idk what i am doing with mongodb and express, i hope it will work in future

--- a/ANGULAR/RicetteSPA/src/app/recipe-list/recipe-list.component.html
+++ b/ANGULAR/RicetteSPA/src/app/recipe-list/recipe-list.component.html
@@ -23,7 +23,7 @@
                         {{ recipeHeader.Name }}
                     </td>
                     <td>
-                        {{ recipeHeader.ExecutionTime }}
+                        {{ recipeHeader.ExecutionTime }} minutes
                     </td>
                     <td>
                         {{ recipeHeader.GetDifficultyString() }}
