--- a/ANGULAR/RicetteSPA/src/app/recipe-card/recipe-card.component.css
+++ b/ANGULAR/RicetteSPA/src/app/recipe-card/recipe-card.component.css
@@ -12,16 +12,15 @@
     grid-template-columns: 45% 55%;
     grid-template-rows: 25% 75%;
 
-    width: 650px;
-    height: 750px;
+    width: min(775px, 100%);
+    height: min(875px, 100%);
     font-size: var(--font-size);
     
-    box-shadow: 2px 2px 100px 10px rgb(0 0 0 / 0.7);
+    box-shadow: 1px 2px 25px 1px rgb(0 0 0 / 0.35);
 
     position: absolute;
     top: 50%;
     left: 50%;
-
     transform: translate(-50%, -50%);
 }
 
@@ -57,7 +56,7 @@
 }
 
 .recipe-info-section, .recipe-instructions-section {
-    grid-row: 2;
+    grid-row: 2;;
     color: var(--text-color);
     padding-inline: min(5%, 1.5rem);
 }
@@ -69,6 +68,7 @@
 
 .recipe-instructions-section {
     padding-top: 20px ;
+    background-color: var(--instructions-bg);
 }
 
 .recipe-ingredients {
