--- a/ANGULAR/RicetteSPA/src/app/recipe-search/recipe-search.component.html
+++ b/ANGULAR/RicetteSPA/src/app/recipe-search/recipe-search.component.html
@@ -1,5 +1,9 @@
-<div class="form-floating mb-3">
-    <input type="text" class="form-control" id="txtSearchBar" placeholder="Search" (keypress)="OnKeyPress($event)">
-    <label for="txtSearchBar">Search</label>
+<div class="form mb-3">
+    <input 
+        type="text" 
+        class="form-control" 
+        id="txtSearchBar" 
+        placeholder="Search (multiple condition separated by commas)" 
+        (keypress)="OnKeyPress($event)">
 </div>
 
