--- a/ANGULAR/RicetteSPA/src/app/recipe-card/recipe-view/recipe-view.component.html
+++ b/ANGULAR/RicetteSPA/src/app/recipe-card/recipe-view/recipe-view.component.html
@@ -1,4 +1,4 @@
-<div class="recipe-card">
+<div class="recipe-view">
     <header class="recipe-header">
         <button class="reset-button close-button" (click)="OnCloseButtonClick()">
             <svg xmlns="http://www.w3.org/2000/svg" height="24" viewBox="0 -960 960 960" width="24" class="close-button-icon">
