--- a/ANGULAR/RicetteSPA/src/app/input-list/input-list.component.html
+++ b/ANGULAR/RicetteSPA/src/app/input-list/input-list.component.html
@@ -1,13 +1,18 @@
-<div class="input-wrapper" >
-    <input 
-        class="input"
+<div class="input-wrapper" [ngClass]="'wrapper-'.concat(label)">
+    <div class="form-floating">
+        <input 
+        class="input form-control"
+        [ngClass]="'input-'.concat(label)"
         type="text"
-        (focus)="OnFocus($event)" 
-        (focusout)="OnFocusOut($event)" 
+        (focus)="OnFocus()" 
+        (focusout)="OnFocusOut()" 
         (keyup)="OnKeyUp($event)" />
-    <div id="options">
-        <div *ngFor="let option of options" class="option-controls">
-            <span class="me-3" (click)="OnSelect(option)">
+
+        <label for="input">{{label}}</label>
+    </div>
+    <div class="options" [ngClass]="'options-'.concat(label)">
+        <div *ngFor="let option of filteredOptions" class="option-controls">
+            <span class="me-3 option-value" (click)="OnSelect(option)">
                 {{option}}
             </span>
             <button type="button" class="reset-button delete-button" (click)="OnDelete(option)">
