--- a/ANGULAR/RicetteSPA/src/app/recipe-card/recipe-edit/recipe-edit.component.html
+++ b/ANGULAR/RicetteSPA/src/app/recipe-card/recipe-edit/recipe-edit.component.html
@@ -20,11 +20,11 @@
             </div>
 
             <div class="mb-3">
-                <input-list [dataSource]="recipe.Ingredients" label="Ingredienti"/>
+                <input-list [dataSource]="recipe.Ingredients" label="Ingredienti" (DataSourceChangedEvent)="OnIngredientsChanged($event)"/>
             </div>
 
             <div class="mb-3">
-                <input-list [dataSource]="recipe.Instructions" label="Istruzioni"/>
+                <input-list [dataSource]="recipe.Instructions" label="Istruzioni" (DataSourceChangedEvent)="OnInstructionsChanged($event)"/>
             </div>
 
             <div class="form-floating description">
@@ -35,6 +35,11 @@
         </form>
     </main>
     <footer>
+        <button class="btn btn-danger" (click)="OnDiscardChanges()">
+            <img src="../../../assets/svg/delete.svg" alt="" class="text-icon me-1">
+            <span>Ignora Modifiche</span>
+        </button>
+
         <button class="btn btn-success btn-save" (click)="OnSave()">
             <img src="../../../assets/svg/tick.svg" alt="" class="text-icon me-1">
             <span>Salva</span>
