--- a/ANGULAR/RicetteSPA/src/app/recipe-card/recipe-edit/recipe-edit.component.html
+++ b/ANGULAR/RicetteSPA/src/app/recipe-card/recipe-edit/recipe-edit.component.html
@@ -35,9 +35,9 @@
         </form>
     </main>
     <footer>
-        <button class="btn btn-danger" (click)="OnDiscardChanges()">
-            <img src="../../../assets/svg/delete.svg" alt="" class="text-icon me-1">
-            <span>Ignora Modifiche</span>
+        <button class="btn btn-warning me-2" (click)="OnDiscardChanges()">
+            <img src="../../../assets/svg/discardEdit.svg" alt="" class="text-icon me-1">
+            <span>Ignora</span>
         </button>
 
         <button class="btn btn-success btn-save" (click)="OnSave()">
