--- a/ANGULAR/RicetteSPA/src/styles.css
+++ b/ANGULAR/RicetteSPA/src/styles.css
@@ -9,8 +9,8 @@
 }
 
 :root {
-    --accent: rgb(252 242 225);
-    --white:  rgb(255 255 255);
+    --accent: rgb(233, 218, 194);
+    --base:  rgb(255 255 255);
     --black: rgb(0 0 0);
     --accent-color: rgb(15, 15, 15);
 }
