--- a/ANGULAR/RicetteSPA/src/styles.css
+++ b/ANGULAR/RicetteSPA/src/styles.css
@@ -10,6 +10,7 @@
 
 :root {
     --accent: rgb(242, 229, 208);
+    --accent-hover: rgb(221, 207, 184);
     --base:  rgb(255 255 255);
     --black: rgb(0 0 0);
     --accent-color: rgb(15, 15, 15);
@@ -62,4 +63,15 @@ html, body {
 .reset-button {
     border: none;
     background-color: transparent;
+}
+
+.btn-primary {
+    background-color: var(--accent);
+    color: var(--black);
+    border: none;
+}
+
+.btn-primary:hover {
+    background-color: var(--accent-hover);
+    color: var(--black);
 }
