implemented 404 page and fixed some bugs (server and client), started implementation of notifications service

--- a/ANGULAR/RicetteSPA/src/app/pages/recipe-card/recipe-view/recipe-view.component.html
+++ b/ANGULAR/RicetteSPA/src/app/pages/recipe-card/recipe-view/recipe-view.component.html
@@ -35,8 +35,12 @@
     </section>
     
     <section class="recipe-instructions-section">
+        <h2> DESCRIPTION</h2>
+        <p>
+            {{ recipe.Description || 'No description provided' }}
+        </p>
+
         <h2> DIRECTIONS </h2>
-    
         <ul class="recipe-instructions">
             <li *ngFor="let instruction of recipe.Instructions">{{instruction}}</li>
         </ul>
