--- a/ANGULAR/RicetteSPA/src/app/pages/not-found/not-found.component.html
+++ b/ANGULAR/RicetteSPA/src/app/pages/not-found/not-found.component.html
@@ -1,1 +1,7 @@
-<h1>404 page not found</h1>
+<section class="wrapper">
+    <img src="../../assets/images/404-bg.jpg" alt="" class="background-image">
+
+    <button class="btn btn-primary btn-back" (click)="OnGoBackClick()">
+        Go Back
+    </button>
+</section>
