--- a/ANGULAR/RicetteSPA/src/app/pages/not-found/not-found.component.css
+++ b/ANGULAR/RicetteSPA/src/app/pages/not-found/not-found.component.css
@@ -3,13 +3,14 @@
 
     display: flex;
     flex-direction: column;
-    align-items: center;
+    align-items: flex-end;
     justify-content: flex-end;
 }
 
 
 .btn-back {
-    font-size: max(3%, 2rem);
-    margin-bottom: 5%;
+    font-size: max(2%, 1.85rem);
+    margin-bottom: 20px;
+    margin-right: 20px;
     padding-inline: 5%;
 }
