fixed server problems and tried to fix reload when recipe add/delete (not working), TODO: fix reload when recipe add/delete and add mongodb on server side :)

--- a/ANGULAR/RicetteSPA/src/app/pages/home/home.component.html
+++ b/ANGULAR/RicetteSPA/src/app/pages/home/home.component.html
@@ -7,7 +7,7 @@
     </header>
     
     <main class="main">
-        <recipe-list />
+        <recipe-list #recipes/>
     </main>
     
     <footer class="footer">
