--- a/ANGULAR/RicetteSPA/src/styles.css
+++ b/ANGULAR/RicetteSPA/src/styles.css
@@ -37,6 +37,12 @@ html, body {
 
     object-fit: cover;
     object-position: center;
+
+    -webkit-user-select: none;
+    -khtml-user-select: none;
+    -moz-user-select: none;
+    -o-user-select: none;
+    user-select: none;
 }
 
 .disabled {
